# visu-cnn

./: Dockerfile  LICENSE  Lab.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
private/scripts/: make_release.sh
src/: run.py  visu.py
